# E-learningWeb

./: .dockerignore  .env  Dockerfile  Dockerfile.backend  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
X/: setting2.py  settings.py  urls.py
backend/: .db.sqlite3  .env  db.sqlite3  manage.py  requirements.txt
backend/Account/: admin.py  models.py  views.py
backend/Category/: admin.py  models.py
backend/Certificate/: admin.py  models.py
backend/Enrollment/: admin.py  models.py
backend/FAQ/: admin.py  models.py
backend/Lesson/: admin.py  models.py
backend/Question/: admin.py  models.py
backend/Quiz/: admin.py  models.py
backend/Review/: admin.py  models.py
backend/X/: .env  db.sqlite3  setting2.py  settings.py  urls.py
backend/courses/: admin.py  api_views.py  forms.py  models.py  serializers.py  urls.py  views.py
backend/templates/: faq.html  index.html  login.html  profile.html  register.html  welcome_email.html
backend/utils/: mail.py
courses/: admin.py  models.py  urls.py  views.py
courses/migrations/: 0001_initial.py  0002_category_slug_course_slug_customuser_bio_and_more.py  0003_faq.py  0004_questionsubmission.py  0005_delete_questionsubmission_alter_faq_answer_and_more.py
elearning-frontend/: package.json
elearning_platform/: README.md  db.sqlite3  manage.py  requirements.txt
elearning_platform/courses/: admin.py  apps.py  forms.py  models.py  signals.py  tests.py  urls.py  views.py
templates/: base.html  course_detail.html  enroll.html  index.html  login.html  profile.html  register.html
(+89 files in other folders)
