[tool.poetry]
name = "x"
version = "0.1.0"
description = ""
authors = ["sandesh patel <sandeshpatel.sp.93@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
